; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/rcheevos/src/rurl/extr_url.c_rc_url_get_unlock_list.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/rcheevos/src/rurl/extr_url.c_rc_url_get_unlock_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [73 x i8] c"http://retroachievements.org/dorequest.php?r=unlocks&u=%s&t=%s&g=%u&h=%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rc_url_get_unlock_list(i8* %0, i64 %1, i8* %2, i8* %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca [64 x i8], align 16
  %15 = alloca [64 x i8], align 16
  %16 = alloca i32, align 4
  store i8* %0, i8** %8, align 8
  store i64 %1, i64* %9, align 8
  store i8* %2, i8** %10, align 8
  store i8* %3, i8** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %17 = getelementptr inbounds [64 x i8], [64 x i8]* %14, i64 0, i64 0
  %18 = load i8*, i8** %10, align 8
  %19 = call i64 @rc_url_encode(i8* %17, i32 64, i8* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %6
  store i32 -1, i32* %7, align 4
  br label %45

22:                                               ; preds = %6
  %23 = getelementptr inbounds [64 x i8], [64 x i8]* %15, i64 0, i64 0
  %24 = load i8*, i8** %11, align 8
  %25 = call i64 @rc_url_encode(i8* %23, i32 64, i8* %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %22
  store i32 -1, i32* %7, align 4
  br label %45

28:                                               ; preds = %22
  %29 = load i8*, i8** %8, align 8
  %30 = load i64, i64* %9, align 8
  %31 = getelementptr inbounds [64 x i8], [64 x i8]* %14, i64 0, i64 0
  %32 = getelementptr inbounds [64 x i8], [64 x i8]* %15, i64 0, i64 0
  %33 = load i32, i32* %12, align 4
  %34 = load i32, i32* %13, align 4
  %35 = icmp ne i32 %34, 0
  %36 = zext i1 %35 to i64
  %37 = select i1 %35, i32 1, i32 0
  %38 = call i32 @snprintf(i8* %29, i64 %30, i8* getelementptr inbounds ([73 x i8], [73 x i8]* @.str, i64 0, i64 0), i8* %31, i8* %32, i32 %33, i32 %37)
  store i32 %38, i32* %16, align 4
  %39 = load i32, i32* %16, align 4
  %40 = sext i32 %39 to i64
  %41 = load i64, i64* %9, align 8
  %42 = icmp uge i64 %40, %41
  %43 = zext i1 %42 to i64
  %44 = select i1 %42, i32 -1, i32 0
  store i32 %44, i32* %7, align 4
  br label %45

45:                                               ; preds = %28, %27, %21
  %46 = load i32, i32* %7, align 4
  ret i32 %46
}

declare dso_local i64 @rc_url_encode(i8*, i32, i8*) #1

declare dso_local i32 @snprintf(i8*, i64, i8*, i8*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
